Fix vert differential on mobile dropdown menu and alter filter flow for mobile and set an active style for focused mobile item.

--- a/src/Components/MobileMenu/MobileMenu.css
+++ b/src/Components/MobileMenu/MobileMenu.css
@@ -37,7 +37,8 @@
   position: relative;
   text-align: center;
   z-index: 7;
-  top: calc(4vh + 1.5rem + calc(calc(1.6rem + calc(.5rem * 2)) * 2));
+  /* 1/2 mobile menu height + (((dropdown option height + (dropdown option padding * 2)) * number of dropdown optoins) / 2) */
+  top: calc(4vh + calc(calc(calc(1.6rem + calc(.5rem * 2)) * 2)) / 2);
   margin-left: calc(-100vw - calc(calc(100vw - 14rem) / 2));
 }
 
