--- a/src/Components/StoreInventory/StoreInventory.css
+++ b/src/Components/StoreInventory/StoreInventory.css
@@ -32,7 +32,15 @@
   background: -webkit-linear-gradient(top,  #faff9e 0%,#dddb89 100%); /* Chrome10-25,Safari5.1-6 */
   background: linear-gradient(to bottom,  #faff9e 0%,#dddb89 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#faff9e', endColorstr='#dddb89',GradientType=0 ); /* IE6-9 */
+}
 
+.activeMobileItem {
+  /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#faff9e+0,dddb89+100 */
+  background: #faff9e; /* Old browsers */
+  background: -moz-linear-gradient(top,  #faff9e 0%, #dddb89 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(top,  #faff9e 0%,#dddb89 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom,  #faff9e 0%,#dddb89 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#faff9e', endColorstr='#dddb89',GradientType=0 ); /* IE6-9 */
 }
 
 .InventoryItemName {
